tests/samples/invalid/mismatched_assign.pn
fn main() -> i32
{
	var x = true;

	x = 100;

	return: 400
}
